# bytenum

./: Cargo.toml  README.md
src/: lib.rs
tests/: bytenum.rs  convert.rs
