[package]
name = "bytenum"
version = "0.1.3"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
Bytenum is a rust derive macro that creates a `try_from<T>` implementation for an enum with only unit variants. 
`T` must be an unsigned numeric type such as `u8`, `u16`, or `u32`.
"""
homepage = "https://github.com/matthewjberger/bytenum"
repository = "https://github.com/matthewjberger/bytenum"
keywords = ["enum", "macro", "byte"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
