[package]
name = "bytenum"
version = "0.1.7"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
Bytenum is a rust derive macro that creates a try_from<T> implementation for an enum with only unit variants. 
T must be an unsigned numeric type such as u8, u16, or u32.
"""
homepage = "https://github.com/matthewjberger/bytenum"
repository = "https://github.com/matthewjberger/bytenum"
keywords = ["enum", "macro", "byte"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
